# hrflow-importer

./: .coveragerc  .env  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  README.md  README.rst  env.example  pyproject.toml  setup.cfg  setup.py
src/hrflow_importer/: __init__.py  import_cli.py
src/hrflow_importer/importer/: worker.py
src/hrflow_importer/utils/: file_handler.py
src/hrflow_importer/utils/config/: __init__.py  config.py
tests/: conftest.py  test_import.py
