[tool.poetry]
name = "hrflow-importer"
version = "0.1.0"
description = "A python package for batch import of resume attachments to be parsed in HrFlow"
authors = ["Moustapha EBNOU <moustapha.ebnou@riminder.net>"]

[tool.poetry.dependencies]
python = "^3.6"
hrflow = "^1.9.0"
tqdm = "^4.62.3"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]


[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

